--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2,4 +2,9 @@ body{
     background-color:white;
 }
 
-
+.card-title {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 25ch;
+}
